# laboratorio_di_programmazione

./: CMakeLists.txt  Chat.cpp  Chat.h  Message.cpp  Message.h  MessageNotifier.cpp  MessageNotifier.h  Observer.h  Subject.h  UnreadMessageNotifier.cpp  UnreadMessageNotifier.h  User.cpp  User.h  main.cpp
test/: ChatTest.cpp  MessageTest.cpp  UnreadMessageNotifierTest.cpp  UserTest.cpp  runAllTests.cpp
